--- a/src/jade/partials/store_details.jade
+++ b/src/jade/partials/store_details.jade
@@ -4,14 +4,14 @@
   br
   .glance.linear
     .fact
-      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.address_line_1")
+      span.value.win-type-large(data-win-bind="innerText: Elsie.Data.selectedStore.address_line_1")
       br
-      span.key.win-type-large address
+      span.key.win-type-small address
     .fact
-      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.city")
+      span.value.win-type-large(data-win-bind="innerText: Elsie.Data.selectedStore.city")
       br
-      span.key.win-type-large city
+      span.key.win-type-small city
     .fact
-      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.telephone")
+      span.value.win-type-large(data-win-bind="innerText: Elsie.Data.selectedStore.telephone")
       br
-      span.key.win-type-large phone
+      span.key.win-type-small phone
