--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -158,7 +158,7 @@ html.win-hoverable.win-toolbar button.win-toolbar-overflowbutton:hover, html.win
 }
 
 button.win-command {
-    left: 15px;
+    //left: 15px;
 }
 
 .win-appbar button.win-appbar-invokebutton.win-appbar-invokebutton:enabled .win-appbar-ellipsis, .win-appbar button.win-appbar-invokebutton.win-appbar-invokebutton:enabled .win-appbar-ellipsis,
