--- a/src/jade/store.jade
+++ b/src/jade/store.jade
@@ -3,7 +3,7 @@ html
   body
     include templates.jade
     #storePivot(data-win-control="WinJS.UI.Pivot",data-win-options="{ title: Elsie.Data.selectedStore.name, selectedIndex: 0 }")
-      .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'details' }")
+      .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'details', isHeaderStatic: true }")
         include partials/store_details.jade
-      .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'nearby' }")
+      .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'nearby', isHeaderStatic: true }")
         include partials/store_nearby.jade
