--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -20,3 +20,5 @@ html
   body(onload="window.onLoad()")
     #app(data-win-control="Application.PageControlNavigator",data-win-options="{home: './home.html', product: './product.html'}")
     include partials/appbar.jade
+    include templates.jade
+
