--- a/src/jade/product.jade
+++ b/src/jade/product.jade
@@ -1,9 +1,7 @@
 doctype
-html
-  body
-    #productPivot(data-win-control="WinJS.UI.Pivot",data-win-options="{ title: Elsie.Data.selectedProduct.name, selectedIndex: 0 }")
-      .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'details' }")
-        include partials/product_details.jade
-        include partials/product_stores.jade
-      .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'similar' }")
-        include partials/product_similar.jade
+#productPivot(data-win-control="WinJS.UI.Pivot",data-win-options="{ title: Elsie.Data.selectedProduct.name, selectedIndex: 0 }")
+  .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'details', managedLV: true }")
+    include partials/product_details.jade
+    include partials/product_stores.jade
+  .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'similar', managedLV: true }")
+    include partials/product_similar.jade
