format phone numbers in a clickable link

--- a/src/jade/partials/store_details.jade
+++ b/src/jade/partials/store_details.jade
@@ -12,6 +12,6 @@
       br
       span.key.win-type-small city
     .fact
-      span.value.win-type-large(data-win-bind="innerText: Elsie.Data.selectedStore.telephone")
+      a.value.win-type-large(data-win-bind="innerText: Elsie.Data.selectedStore.telephone; href: Elsie.Data.selectedStore.telephone Elsie.Interface.formatTelephoneNumber")
       br
       span.key.win-type-small phone
