nearby stores functionality. rebase to winjs 3.0.1 for real appbar. lots of cleanup

--- a/src/jade/partials/store_details.jade
+++ b/src/jade/partials/store_details.jade
@@ -4,14 +4,14 @@
   br
   .glance.linear
     .fact
-      span.value.win-type-large(data-win-bind="innerText: Elsie.Data.selectedStore.address_line_1")
+      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.address_line_1")
       br
-      span.key.win-type-small address
+      span.key.win-type-medium address
     .fact
-      span.value.win-type-large(data-win-bind="innerText: Elsie.Data.selectedStore.city")
+      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.city")
       br
-      span.key.win-type-small city
+      span.key.win-type-medium city
     .fact
-      a.value.win-type-large(data-win-bind="innerText: Elsie.Data.selectedStore.telephone; href: Elsie.Data.selectedStore.telephone Elsie.Interface.formatTelephoneNumber")
+      a.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.telephone; href: Elsie.Data.selectedStore.telephone Elsie.Interface.formatTelephoneNumber")
       br
-      span.key.win-type-small phone
+      span.key.win-type-medium phone
