formatting of image thumbnails

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -350,8 +350,8 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
         }
     }
     img.listItem-Image {
-        height: 60px;
-        margin: 5px;
+        height: 70px;
+        margin: 0;
     }
     .listItem-Detail {
         margin: 5px;
