--- a/src/jade/partials/product_stores.jade
+++ b/src/jade/partials/product_stores.jade
@@ -1,2 +1,2 @@
 .elsie-title Nearby Availability
-#storeResults(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('#storeResultsTemplate'), layout : {type: WinJS.UI.ListLayout}, selectionMode: 'none', itemDataSource: Elsie.Data.processed.nearbyStoresWithProduct.dataSource}")
+#storeResults(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.storeResultsTemplate'), layout : {type: WinJS.UI.ListLayout}, selectionMode: 'none' }")
