--- a/src/jade/partials/search.jade
+++ b/src/jade/partials/search.jade
@@ -2,4 +2,4 @@
   #searchBoxContainer.win-searchbox
     input#searchBoxId.win-searchbox-input(type='search', placeholder='Search for a product')
 
-#productResults(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('#productResultsTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
+#productResults(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.productResultsTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
