--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,7 @@
 $primary-color: #674172; //purple
 $secondary-color: #444; //grey
 $background-color: #ecf0f1; //white
-$highlight-color: #f1c40f; //sunflower
+$highlight-color: #FCD53B; //sunflower
 
 body {
     background: $background-color;
