--- a/src/jade/partials/store_details.jade
+++ b/src/jade/partials/store_details.jade
@@ -7,10 +7,14 @@
       a.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.address_line_1; href: Elsie.Data.selectedStore Elsie.Interface.formatAddress")
       br
       span.key.win-type-medium view map
-    //.fact
-      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.city")
+    .fact
+      a.value.win-type-x-large(data-win-bind="textContent: Elsie.Data.selectedStore.distance_in_meters Elsie.Interface.convertMetersToKilometers; href: Elsie.Data.selectedStore Elsie.Interface.formatAddress")
       br
-      span.key.win-type-medium city
+      span.key.win-type-medium from your location
+    .fact
+      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore Elsie.Interface.determineStoreOpen")
+      br
+      span.key.win-type-medium(data-win-bind="innerText: Elsie.Data.selectedStore Elsie.Interface.determineTimeToOpenOrClose")
     .fact
       a.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.telephone; href: Elsie.Data.selectedStore.telephone Elsie.Interface.formatTelephoneNumber")
       br
