ship similar products feature. close #14

--- a/src/jade/partials/product_similar.jade
+++ b/src/jade/partials/product_similar.jade
@@ -1,1 +1,1 @@
-span This template will list similar products to the selected item.
+#similarProducts(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.productResultsTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
