--- a/src/jade/partials/recent.jade
+++ b/src/jade/partials/recent.jade
@@ -1,3 +1,5 @@
+h4#explanation Your recently searched products will appear here. 
+
 #recent
   h5.elsie-title Recent Products
   #recentProducts(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.productResultsTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
