--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -99,6 +99,15 @@ progress:indeterminate {
     display: none;
 }
 
+#explanation {
+    width: 80%;
+    margin: 50px auto;
+    color: $secondary-color;
+    display: none;
+    opacity: 0.6;
+    text-align: center;
+}
+
 #status {
     text-align: center;
 }
