--- a/src/jade/partials/product_details.jade
+++ b/src/jade/partials/product_details.jade
@@ -2,17 +2,21 @@
   .image#productImage
     img(data-win-bind="src: Elsie.Data.selectedProduct.image_url")
   .glance
-    .fact
+    .fact(style="width: 100%;")
+      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedProduct.secondary_category")
+      br
+      span.key.win-type-medium type
+    //.fact
       span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedProduct.alcohol_content Elsie.Interface.convertABVtoPercentage")
       br
       span.key.win-type-medium abv
+    .fact
+      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedProduct.price_in_cents Elsie.Interface.convertCentsToDollars")
+      br
+      span.key.win-type-medium price
     .fact
       span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedProduct.package_unit_volume_in_milliliters")
       br
       span.key.win-type-medium 
         | ml x 
         span(data-win-bind="innerText: Elsie.Data.selectedProduct.total_package_units")
-    .fact
-      span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedProduct.price_in_cents Elsie.Interface.convertCentsToDollars")
-      br
-      span.key.win-type-medium price
