handle out of stocks and no similar products, close #41

--- a/src/jade/partials/recent.jade
+++ b/src/jade/partials/recent.jade
@@ -1,4 +1,4 @@
-h4#explanation Your recently searched products will appear here. 
+h4#explanation.explanation Your recently searched products will appear here. 
 
 #recent
   h5.elsie-title Recent Products
