--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -99,7 +99,7 @@ progress:indeterminate {
     display: none;
 }
 
-#explanation {
+.explanation {
     width: 80%;
     margin: 50px auto;
     color: $secondary-color;
