--- a/src/jade/partials/product_stores.jade
+++ b/src/jade/partials/product_stores.jade
@@ -1,2 +1,3 @@
 .elsie-title Nearby Availability
+h4.explanation#noStock This product is not in stock at any stores. :(
 #storeResults(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.storeResultsTemplate'), layout : {type: WinJS.UI.ListLayout}, selectionMode: 'none' }")
