--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -17,6 +17,8 @@ html
     script(src='js/_structure.js')
     script(src='js/_ui.js')
     script(src='js/app.js')
+    // Stripe
+    script(src="https://checkout.stripe.com/checkout.js")
   body(onload="window.onLoad()")
     #app(data-win-control="Application.PageControlNavigator")
     include partials/appbar.jade
