--- a/src/jade/about.jade
+++ b/src/jade/about.jade
@@ -11,6 +11,5 @@ doctype
       | 's amazing 
       a(href="http://lcboapi.com",target="_blank") LCBO API
       | . Product stock info is updated daily.
-    p Elsie is free, but building her was not. You can help guarantee her future with a donation.
-    button.donate#donateButton Donate
+    p Elsie is free, but building her was not. You can help guarantee her future by purchasing her in the Windows Store.
     p.affiliation Elsie &amp; the LCBO API aren't affiliated with the LCBO.
