--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,11 +3,11 @@ html
   head
     meta(charset='utf-8')
     title Elsie
-    link(rel='stylesheet', href='css/lib/ui-light.css')
+    link(rel='stylesheet', href='css/lib/ui-light.min.css')
     link(rel='stylesheet', href='css/app.css')
     // WinJS 3.0.1
-    script(src="js/lib/base.js")
-    script(src="js/lib/ui.js")
+    script(src="js/lib/base.min.js")
+    script(src="js/lib/ui.min.js")
     // Cordova 4.0.0
     script(src='cordova.js')
     // Elsie 1.0
