bring down size of ios/android progress indicator

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -59,6 +59,7 @@ progress {
     position: fixed;
     background-color: transparent;
     color: $highlight-color;
+    height: 2px;
 }
 
 progress::-webkit-progress-value {
