replace stores/nearby with stores/inventory. way more useful.

--- a/src/jade/store.jade
+++ b/src/jade/store.jade
@@ -2,5 +2,5 @@ doctype
 #storePivot(data-win-control="WinJS.UI.Pivot",data-win-options="{ title: Elsie.Data.selectedStore.name, selectedIndex: 0 }")
   .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'details', isHeaderStatic: true }")
     include partials/store_details.jade
-  .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'nearby', isHeaderStatic: true }")
-    include partials/store_nearby.jade
+  .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'inventory', isHeaderStatic: true }")
+    include partials/store_inventory.jade
