--- a/src/jade/partials/appbar.jade
+++ b/src/jade/partials/appbar.jade
@@ -1,4 +1,4 @@
 #appBar(data-win-control="WinJS.UI.AppBar",data-win-options="{closedDisplayMode: 'compact'}")
-  button#button-home(data-win-control="WinJS.UI.AppBarCommand",data-win-options="{id:'home', type:'button', label:'home', icon: 'home', section: 'global'}")
-  button#button-nearby(data-win-control="WinJS.UI.AppBarCommand",data-win-options="{id:'nearby', type:'button', label:'nearby', icon: 'mappin', section: 'global'}")
-  button#button-about(data-win-control="WinJS.UI.AppBarCommand",data-win-options="{id:'about', type:'button', label:'about', icon: 'help', section: 'global'}")
+  button#button-home(data-win-control="WinJS.UI.AppBarCommand",data-win-options="{id:'home', type:'button', label:'home', icon: 'url(img/icon_home.png)', section: 'global'}")
+  button#button-nearby(data-win-control="WinJS.UI.AppBarCommand",data-win-options="{id:'nearby', type:'button', label:'nearby', icon: 'url(img/icon_map.png)', section: 'global'}")
+  button#button-about(data-win-control="WinJS.UI.AppBarCommand",data-win-options="{id:'about', type:'button', label:'about', icon: 'url(img/icon_about.png)', section: 'global'}")
